--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ const devices = {
     "393x852": "iphone14pro-family.jpg",
     "430x932-pro": "iphone14promax-family.jpg",
     "402x874": "iphone16-family.jpg"
+    "428x926": "iphone13promax-family.jpg
 };
 
 let step = 0;
